# dev-how-to

./: .gitignore  .readthedocs.yaml  .ycm_extra_conf.py  Guardfile  README.adoc  README.md  anki-templ.sh  asciidoctor-original-with-overrides.css  asciidoctor-overrides.css  asciidoctor-styles-overrides.adoc  bash.adoc  blocks-props-lambdas.adoc  closures.md  cmdline.adoc  encoding-unicode-utf8.md  highlight-navigation.js  javascript.adoc  myst.yml  org-setup.org  ruby.adoc  templ1.adoc  terminal-emulators.adoc  tmux.sh  unicode-utf8.adoc  wiki.md
.githooks/: commit-msg  pre-commit
How-To-Design-Programs/: README.md
algdsjs/: algdsjs.index.adoc
algdsts/: Guardfile.algdsts  algdsjs.index.adoc
anki/: html-cards.adoc
archlinux/: aurutils.adoc
bash/: bash-arrays.adoc  bash-arrays.md  bash-ifs-field-separator-variable.md  basic-concepts.md  functions.adoc  functions.md  here-document.md  links-resources.adoc  parameter-expansion.adoc  parameter-expansion.md  stdin.md  stdin.org  strings.md
bkp1/: terminal-emulators.adoc
c/: strings.adoc
c/meson-unity-1/: .gitignore  meson.build  meson.build.bkp
c/meson-unity-1/include/: unity_config.h
c/meson-unity-1/src/: add.c
cmdline/: argument-syntax.adoc  built-in.adoc  command-line-intro.adoc  curl.adoc  cut.md  file-conversion.md  head.md  intro.adoc  man-info-help.adoc  newline.adoc  sed.adoc  tar.adoc  tr.md
codewars/: .gitignore  001-multiply.adoc  002-sum-of-numbers-series.adoc  003-get-middle-char.adoc  004-remove-first-last-chars.adoc  005-sum-of-positive.adoc  006-boolean-to-yes-no-string.adoc  (+3 more)
(+1221 files in other folders)
